--- a/app/views/coins/show.html.slim
+++ b/app/views/coins/show.html.slim
@@ -1,10 +1,9 @@
+=< link_to " <- Back", coins_path, class:"btn btn-light"
 p style="color: green" = notice
 
 == render @coin
 
 div
-  => link_to "Edit this coin", edit_coin_path(@coin)
-  '|
-  =< link_to "Back to coins", coins_path
-
-  = button_to "Destroy this coin", @coin, method: :delete
+  .btn-group role="group"
+    => link_to "Edit", edit_coin_path(@coin), class:"btn btn-primary"
+    => button_to "Delete", @coin, method: :delete, class:"btn btn-danger"
