--- a/app/views/coins/index.html.slim
+++ b/app/views/coins/index.html.slim
@@ -1,32 +1,5 @@
 p style="color: green" = notice
 
-h1 Coins
-
-#coins
-  table.table
-    thead
-      tr
-        th id
-        th acronym
-        th icon
-        th coin name
-        th colspan="2" align="center" actions
-    tbody
-      - @coins.each do |coin|
-        tr
-          strong
-            td = coin.id
-          td = coin.acronym
-          td
-            = image_tag coin.url_image, size:"25x25"
-          td = coin.short_description
-          td
-            .btn-group role="group"
-              = link_to "show", coin_path(coin), class: "btn btn-primary"
-              = button_to "delete", coin_path(coin), method: :delete, class: "btn btn-danger"
-
-= link_to "New coin", new_coin_path
-
 .card style="margin: 5rem;"
   h2.card-header Coins
   .card-body
@@ -47,4 +20,5 @@ h1 Coins
                   = link_to "show", coin_path(coin), class: "btn btn-primary"
                   = link_to "edit", edit_coin_path(coin), class:"btn btn-success"
                   = button_to "delete", coin_path(coin), method: :delete, class: "btn btn-danger"
-            
+  .card-footer
+    = link_to "New coin", new_coin_path
