--- a/app/views/coins/_form.html.slim
+++ b/app/views/coins/_form.html.slim
@@ -1,33 +1,40 @@
-= simple_form_for @coin do |f|
-  - if @coin.errors.any?
-    div style="color: red"
-      h2 = "#{pluralize(@coin.errors.count, "error")} prohibited this coin from being saved:"
-      ul
-        - @coin.errors.each do |error|
-          li = error.full_message
-  form
-    .row
+div style="padding: 3rem"
+  = simple_form_for @coin do |f|
+    - if @coin.errors.any?
+      div style="color: red"
+        h2 = "#{pluralize(@coin.errors.count, "error")} prohibited this coin from being saved:"
+        ul
+          - @coin.errors.each do |error|
+            li = error.full_message
+    form
+      .row
+        .form-group
+          .col-sm-5
+            = f.input :short_description, label: "Name", input_html: { class: 'form-control' }
+          .col-sm-5
+            = f.input :acronym, input_html: { class: 'form-control', placeholder: 'BTC' }
       .form-group
-        .col-sm-5
-          = f.input :short_description, label: "Name", input_html: { class: 'form-control' }
-        .col-sm-5
-          = f.input :acronym, input_html: { class: 'form-control', placeholder: 'BTC' }
-    .form-group
-      .col-sm-12 style="margin-bottom: 0px !important;"
-        = f.input :long_description, input_html: { class: 'form-control', style: 'margin-bottom: 0px !important;' }
-        small class="form-text text-muted" We'll never share your email with anyone else
-    .form-group
-      .col-sm-12
-        = f.input :url_image, input_html: { class: 'form-control'}
-    br
-    br
-    .row
+        .col-sm-12 style="margin-bottom: 0px !important;"
+          = f.input :long_description, input_html: { class: 'form-control', style: 'margin-bottom: 0px !important;' }
+          small class="form-text text-muted" We'll never share your email with anyone else
       .form-group
-        .form-check.form-switch
-          = f.check_box :active, class: 'form-check-input'
-          = f.label class: 'form-check-label'
-              | Example checkbox
+        .col-sm-12
+          = f.input :url_image, input_html: { class: 'form-control'}
+      .row
+        .form-group
+          .col-sm-6
+            = f.input :mining_type_id, collection: @mining_types, label: 'Mining Type*', label_method: :description, include_blank: "Select", input_html: {class: 'form-select'}
+            
+            //forma trad
+            //f.select(mining_type_id, MiningType.all.collect{|m| [m.description, m.id]}, {include_blank: true})
+      br
+      .row
+        .form-group
+          .form-check.form-switch
+            = f.check_box :active, class: 'form-check-input'
+            = f.label class: 'form-check-label'
+                | Example checkbox
 
-    .form-group
-      .col-sm-offset-2.col-sm-10
-        = f.button :submit, class: 'btn btn-primary'
+      .form-group
+        .col-sm-offset-2.col-sm-10
+          = f.button :submit, class: 'btn btn-primary'
