--- a/app/views/coins/index.html.slim
+++ b/app/views/coins/index.html.slim
@@ -11,7 +11,7 @@ p style="color: green" = notice
               .card-body
                 h4.card-title 
                   = coin.short_description
-                p Acronym: #{coin.acronym}
+                p #{@coins.human_attribute_name(:acronym)}: #{coin.acronym}
                 p Icon: #{image_tag coin.url_image, size:"25x25"}
                 p Mining Type: #{coin.mining_type.acronym}
                 p.justified-text = coin.long_description
