--- a/app/views/layouts/_menu.html.slim
+++ b/app/views/layouts/_menu.html.slim
@@ -14,5 +14,5 @@ nav.navbar.navbar-expand-lg.navbar-light.bg-light style="padding-left: 10px"
         a.nav-link.dropdown-toggle href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false"
           | Language
         .dropdown-menu.dropdown-menu-right aria-labelledby="navbarDropdown"
-          = link_to 'PT-BR', '?locale=pt-BR', class: 'dropdown-item'
-          = link_to 'ENG', '?locale=en', class: 'dropdown-item'
+          = link_to 'PT-BR', root_path(locale: 'pt-BR'), class: 'dropdown-item'
+          = link_to 'ENG', root_path(locale: 'en'), class: 'dropdown-item'
